--- a/assets/sass/layout/nav.sass
+++ b/assets/sass/layout/nav.sass
@@ -2,7 +2,7 @@ nav
   position: fixed
   width: 100%
   border-bottom: 1px solid lighten($black, 50%)
-  z-index: 100
+  z-index: 120
   background-color: $white
   line-height: 60px
 
